<resources>
    <string name="app_name">EChannel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ChannelingTitle">Meet Your Doctor</string>
    <string name="Hospitalt">Hospital Type</string>
    <string name="specialization">specialization - Describtion</string>
    <string name="hospital">Hospital</string>
    <string name="date">Date</string>
    <string name="btncheck">CHECK AVAILABILITY</string>

    <string-array name="courses">
        <item>ANY</item>
        <item>C#</item>
        <item>Python</item>
        <item>VB.net</item>
        <item>C</item>
        <item>C++</item>
        <item>HTML</item>
    </string-array>

    <string-array name="specification">
        <item>ANY</item>
        <item>C#</item>
        <item>Python</item>
        <item>VB.net</item>
        <item>C</item>
        <item>C++</item>
        <item>HTML</item>
    </string-array>

    <string-array name="hostpital">
        <item>ANY</item>
        <item>C#</item>
        <item>Python</item>
        <item>VB.net</item>
        <item>C</item>
        <item>C++</item>
        <item>HTML</item>
    </string-array>
    <string name="title_activity_available_doctors">AvailableDoctors</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="doctorname">Dr Harry Potter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pcr_test">PCR</string>
    <string name="menu_channelling">Channelling</string>
    <string name="menu_runningnum">Running Number</string>
    <string name="menu_driving">Driving License Medical</string>
    <string name="menu_pcr">menupcr</string>
    <string name="menu_history">Channel History</string>
    <string name="menu_refund">Claim Refund</string>
    <string name="menu_contact">Contact Us</string>

    <string name="pcr">PCR</string>
    <string name="pcrtest">PCR TEST</string>
    <string name="durdans">DURDANS HOSPITAL</string>
    <string name="pcr1">PCR TEST</string>
    <string name="hospital_address">Durdans Hospital - Colombo 3</string>
    <string name="book">BOOK</string>
</resources>