<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/cardview_light_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        card_view:cardCornerRadius="5dp"
        card_view:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:background="#0288D1"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent">


                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="41dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginRight="150dp"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/ic_baseline_local_hospital_24"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="33dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="1.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.476"
                    card_view:srcCompat="@drawable/ic_baseline_local_hospital_24"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="102dp"
                    android:layout_marginLeft="102dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="134dp"
                    android:layout_marginRight="134dp"
                    android:layout_marginBottom="21dp"
                    android:text="@string/durdans"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/image2"
                    card_view:layout_constraintHorizontal_bias="0.374"
                    card_view:layout_constraintStart_toEndOf="@+id/image1"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="119dp"
                    android:layout_marginLeft="119dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="117dp"
                    android:layout_marginRight="117dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pcr1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/image2"
                    card_view:layout_constraintHorizontal_bias="0.58"
                    card_view:layout_constraintStart_toEndOf="@+id/image1"
                    card_view:layout_constraintTop_toBottomOf="@+id/textView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="137dp"
                    android:layout_marginLeft="137dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="181dp"
                    android:layout_marginRight="181dp"
                    android:layout_marginBottom="100dp"
                    android:text="@string/hospital_address"
                    android:textColor="#1E88E5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/available"
                    android:layout_width="90dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="161dp"
                    android:layout_marginLeft="161dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="161dp"
                    android:layout_marginRight="161dp"
                    android:layout_marginBottom="26dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FF303F9F"
                    android:onClick="click"
                    android:text="@string/book"

                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="1.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/textView6"
                    card_view:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>